# ClipVault

./: LICENSE  README.md  clipvault.spec  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
clipvault/: __init__.py  __main__.py  app.py  config.py  hotkeys.py  ocr.py  paste_ring.py  utils.py
clipvault/capture/: __init__.py  filters.py  monitor.py
clipvault/models/: __init__.py  entry.py
clipvault/storage/: __init__.py  config_store.py  vault.py
clipvault/ui/: __init__.py  animated_background.py  command_palette.py  entry_widget.py  glow_button.py  main_window.py  mini_panel.py  pin_dialog.py  search_suggestions.py  settings_dialog.py  stats_dialog.py  tag_editor.py  theme.py  timeline_dialog.py
tests/: conftest.py  test_bulk_actions.py  test_config.py  test_entry.py  test_hotkeys.py  test_ocr.py  test_paste_ring.py  test_retention.py  test_search_history.py  test_tags.py  test_timeline.py  test_vault.py
