[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipvault"
version = "3.0.0"
description = "Professional Clipboard Manager with CyberTech Aesthetics"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ClipVault" }]
dependencies = [
    "PyQt6>=6.5",
    "cryptography>=41.0",
    "pyperclip>=1.8",
    "pynput>=1.7",
]

[project.optional-dependencies]
image = ["Pillow>=10.0"]
ocr = ["pytesseract>=0.3"]
fuzzy = ["rapidfuzz>=3.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
clipvault = "clipvault.app:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
